--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
+    "bitcore-ecies": "^1.0.3",
+    "bitcore-lib": "^0.15.0",
     "buffer": "^5.0.7",
     "eslint": "^4.15.0",
     "eslint-config-google": "^0.9.1",
